# RosettaFables

./: .gitignore  README.md  aesop.py  aesop_extract_nlp_nl_de.pages  aesop_extract_nlp_nl_de.txt  aesop_spacy_nl_de.ipynb  pyproject.toml
.github/workflows/: tests.yml
data/analysis/: character_all.json  comparison_1.json  comparison_2.json  comparison_3.json  comparison_4.json  comparison_5.json  comparison_6.json  comparison_7.json  entity_de.json  entity_en.json  entity_es.json  entity_nl.json  explicit_morals_grc.json  implicit_morals_de.json  implicit_morals_es.json  moral_comparison_all.json  moral_themes_de.json  pos_de.json  pos_en.json  pos_es.json  pos_grc.json  pos_nl.json  processed_.json  processed_de.json  processed_en.json  processed_es.json  processed_grc.json  processed_nl.json  summary.json
data/analysis/clustering/: all_cross_language.json  all_hierarchical.json  all_kmeans.json
data/analysis/nlp/: all_tfidf.json  all_topic_modeling.json
data/analysis/stats/: 2_word_frequency.json  5_word_frequency.json  7_word_frequency.json
data/processed/: fables_.json  fables_de.json  fables_en.json  fables_es.json  fables_grc.json  fables_nl.json  fables_test.json  initial_fables.json
data/raw/: first_fables_set.ods
notebooks/: 01_data_exploration.ipynb  02_entity_recognition.ipynb
src/aesop_spacy/: main.py
tests/: test_analyzers.py  test_clustering.py  test_dependencies.py  test_entity_recognizer.py  test_greek.py  test_loader.py  test_models.py  test_moral_detector.py  test_nlp_techniques.py  test_pipeline.py  test_sentiment_analyzer.py  test_simple_visualization.py  test_stats_analyzer.py  test_style_analyzer.py  test_syntax_analyzer.py  test_visualizations.py
(+175 files in other folders)
