[tool.poetry]
name = "aesop-spacy"
version = "0.1.0"
description = "Analysis of some Aesop's fables in dutch and german using nlp --spacys library."
authors = ["Enrique Viveros"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spacy = "^3.7.5"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

