[tool.poetry]
name = "aesop-spacy"
version = "0.1.0"
description = "Analysis of some Aesop's fables multilingual using nlp --spacys library."
authors = ["Enrique Viveros"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
spacy = "^3.8.4"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
numpy = "^1.26.4"
matplotlib = "^3.10.1"
stanza = "^1.10.1"
pandas = "^2.2.3"
ipython = "^9.0.2"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
nltk = "^3.9.1"
sentence-transformers = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

